SIP-4070: Auto-disable to select all check-box SIP-4072: Refresh Issue in Import screen SIP-4074: Warning MSG modified SIP-4075: removed pointer from Attach-json-file label SIP-4076: added validation on Export-error-log button SIP-4119: override alignment

--- a/saw-web/src/main/javascript/app/modules/admin/components/import/import.component.scss
+++ b/saw-web/src/main/javascript/app/modules/admin/components/import/import.component.scss
@@ -40,4 +40,8 @@ import-component {
     color: $primary-white;
     background-color: $primary-blue-b2;
   }
+
+  .remove-pionter {
+    cursor: text !important;
+  }
 }
